fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .kanban-board {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   padding: 20px;
 }
 
